# lemin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  author  flow_one  invalid  invalid10  invalid11  invalid12  invalid3  invalid4  invalid5  invalid6  invalid7  invalid9  map1  test2  test3  test4  test5  valid1  valid2  valid3  valid4  valid5
inc/: lemin.h
src/: bfsearch.c  graph.c  main.c  output.c  reader.c  solver.c  todelete.c  validator.c
